# ygopen-gui

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  dependency_graph.dot  dependency_graph.xmi  library_dependency_graph.dot  meson.build
android-project/: .gitignore
android-project/app/: build.gradle
android-project/app/jni/: Application.mk
android-project/app/jni/ocgcore-proto/: Android.mk
android-project/app/jni/protobuf/: Android.mk
android-project/app/jni/src/: Android.mk
android-project/app/jni/ygopen/: Android.mk
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/xyz/dyxel/ygopen/: YGOpen.java  ygopenActivity.java
lib/: CMakeLists.txt
src/: CMakeLists.txt  board.hpp  board_interpret_info.inl  configs.cpp  configs.hpp  game_data.cpp  game_data.hpp  game_instance.cpp  game_instance.hpp  main.cpp  sdl_utility.cpp  sdl_utility.hpp  service.hpp  service_locator.hpp  state.hpp  text_smith.cpp  text_smith.hpp
src/drawing/: api.cpp  gl_es2_funcs.h  gl_include.cpp  primitive.hpp  quad.cpp  quad.hpp  renderer.hpp  sdlwindow.cpp  sdlwindow.hpp  texture.cpp  texture.hpp  types.hpp
src/drawing/dummy/: primitive.cpp  primitive.hpp
src/drawing/gl_core/: primitive.cpp  primitive.hpp  renderer.cpp  renderer.hpp
src/drawing/gl_es/: primitive.cpp  primitive.hpp  renderer.cpp  renderer.hpp
src/drawing/gl_shared/: program.cpp  program.hpp  renderer.cpp  renderer.hpp  shader.cpp  texture.cpp  texture.hpp
src/gframe/: animation.cpp  animation.hpp  animator.cpp  animator.hpp  card_texture_manager.cpp  card_texture_manager.hpp  constants.hpp  graphic_board.cpp  graphic_board.hpp  graphic_board_animate_info.inl  graphic_board_animate_request.inl  graphic_board_base.cpp  graphic_board_base.hpp  graphic_card.hpp
src/gframe/animations/: call.cpp  call.hpp  move_card.cpp  move_card.hpp  set_card_image.cpp  set_card_image.hpp
src/gframe/elements/: action_btn.cpp  action_btn.hpp
src/gui/: button.cpp  button.hpp  common.hpp  element.hpp  environment.cpp  environment.hpp
src/service/: config.hpp  immediate.cpp  immediate.hpp
src/state/: menu.cpp  menu.hpp  test.cpp  test.hpp
src/states/: duel.cpp  duel.hpp  loading.cpp  loading.hpp  menu.cpp  menu.hpp
travis/: build.sh  bundle.sh  dependencies.sh
